# plaintextesports

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml.example
.github/workflows/: ci.yml  ghcr-cleanup.yml
benches/: request_pipeline.rs  tiering.rs
examples/: alloc_profile.rs  gen_vapid.rs  ocb_probe.rs
fixtures/: pandascore_sample.json
scripts/icons/: generate.sh
scripts/perf/: README.md  bench.sh  flamegraph.sh  load_test.sh  wasm-budget.txt  wasm_size.sh
src/: app.rs  bracket.rs  bracket_build.rs  cache.rs  config.rs  espn.rs  f1.rs  feed.rs  http.rs  icons.rs  lib.rs  liquipedia.rs  main.rs  mlb.rs  nhl.rs  ocblacktop.rs  openf1.rs  pandascore.rs  push.rs  reveal.rs  server.rs  soop.rs  store.rs  sw.js  tft.rs  tiering.rs  twitch.rs  twitch_discover.rs  twitch_gql.rs  types.rs  watch.rs  youtube.rs
src/app/: helpers.rs  mod.rs  playoffs.rs  storage.rs
src/app/components/: boxscore.rs  calendar.rs  footer.rs  header.rs  mod.rs  schedule.rs  standings.rs  subscribe.rs  tft_extra.rs  toggles.rs
src/app/pages/: about.rs  event.rs  home.rs  match_detail.rs  mod.rs  notifications.rs  team.rs
src/competetft/: mod.rs  rsc.rs  sheet.rs
src/fixtures/: competetft_finals.csv  competetft_info.csv  competetft_leaderboard.csv  competetft_lobbies.csv  competetft_schedule.html  competetft_streams.csv  competetft_tournament.html  tft_prizepool.html  tft_prizepool_finished.html  tft_standings.html  tft_upcoming.html
src/pandascore/: brackets.rs  mod.rs
src/testdata/: espn_nfl_summary_401772988.json  mlb_boxscore_824819.json  mlb_linescore_824819.json  nhl_boxscore_2025021301.json  nhl_landing_2025021301.json  nhl_rightrail_2025021301.json
style/: main.scss
