[package]
name = "plaintextesports"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.19", features = ["nightly"] }
leptos_router = { version = "0.8.13", features = ["nightly"] }
leptos_meta = { version = "0.8.6" }
axum = { version = "0.8.9", optional = true }
leptos_axum = { version = "0.8.9", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
futures = { version = "0.3", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = [
  "fs",
  "set-header",
  "compression-gzip",
  "compression-br",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Storage",
  "Element",
  "HtmlElement",
  "DomTokenList",
  "MediaQueryList",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "EventTarget",
  "DomRect",
  "History",
  "Location",
  "Node",
  "NodeList",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
chrono-tz = { version = "0.10", optional = true }
once_cell = { version = "1.21", optional = true }
dotenvy = { version = "0.15", optional = true }
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
web-push-native = { version = "0.4.0", features = ["vapid"], optional = true }
base64ct = { version = "1", features = ["alloc"], optional = true }
http = { version = "1", optional = true }
toml = { version = "1.1.2", default-features = false, features = [
  "parse",
  "serde",
], optional = true }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:web-sys",
]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:futures",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "dep:dotenvy",
  "dep:once_cell",
  "dep:reqwest",
  "dep:serde_json",
  "dep:chrono",
  "dep:chrono-tz",
  "dep:rusqlite",
  "dep:web-push-native",
  "dep:base64ct",
  "dep:http",
  "dep:toml",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[dev-dependencies]
getrandom = "0.2"

# VAPID key generator (cargo run --example gen_vapid --features ssr).
[[example]]
name = "gen_vapid"
required-features = ["ssr"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.leptos]
output-name = "plaintextesports"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
# Append a content hash to the JS/WASM/CSS filenames so each build gets unique
# URLs. Lets the CDN cache /pkg/* immutably with no chance of serving a stale
# JS against a fresh WASM (the wasm-bindgen mismatch we hit). Must also be set at
# runtime via LEPTOS_HASH_FILES=true so HydrationScripts emits the hashed names.
hash-files = true
site-addr = "127.0.0.1:4000"
reload-port = 4001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
